@@ -10,6 +10,7 @@ dist = Dist-Zilla-PluginBundle-Author-CHIM
 GitCheck.allow_dirty = dist.ini
 GitCheck.allow_dirty = Changes
 GitCheck.allow_dirty = README.md
+GatherDir.exclude_match = dist.ini$
 
 [ModuleShareDirs]
 Dist::Zilla::MintingProfile::Author::CHIM = profiles
@@ -30,7 +31,7 @@ Dist::Zilla::Plugin::Test::Kwalitee                 = 2.03
 Dist::Zilla::Plugin::Test::Version                  = 0.002004
 Dist::Zilla::Plugin::Test::EOL                      = 0.08
 Dist::Zilla::Plugin::Test::NoTabs                   = 0.04
-Dist::Zilla::Plugin::TravisCI::StatusBadge          = 0.004
+Dist::Zilla::Plugin::TravisCI::StatusBadge          = 0.005
 Dist::Zilla::Plugin::Git                            = 2.023
 Dist::Zilla::Role::PluginBundle::PluginRemover      = 0.102
 Dist::Zilla::Plugin::GithubMeta                     = 0.46
